
syntax = "proto3";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "LibraryGrpc";
import "google/api/annotations.proto";

package bookit;

service BookIt
{

    // Read single
    rpc ReadBook(ReadBookRequest) returns (ReadBookResponse) {
        option (google.api.http) = {
            get: "/v1/book/{Id}"
        };
    }

    rpc GetBookByTitle(GetBookByTitleRequest) returns (GetBookByTitleResponse) {
        option (google.api.http) = {
            get: "/v1/book/bookbytitle/{Id}"
        };
    }

    // Read list
    rpc ListBook(GetAllBookRequest) returns (GetAllBookResponse) {
        option (google.api.http) = {
            get: "/v1/book"
        };
    }

    // Update
    rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse) {
        option (google.api.http) = {
            put: "/v1/book",
            body: "*"
        };
    }

    // Update
    rpc ReturnBook(ReturnBookRequest) returns (ReturnBookResponse) {
        option (google.api.http) = {
            put: "/v1/book/return",
            body: "*"
        };
    }

    // Categories
    rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse) {
        option (google.api.http) = {
            put: "/v1/book/categories",
            body: "*"
        };
    }

    rpc GetBooksByCategory(GetBooksByCategoryRequest) returns (GetBooksByCategoryResponse) {
        option (google.api.http) = {
            put: "/v1/book/bookbycategory",
            body: "*"
        };
    }
    rpc GetBooksByUserId(ListAllBooksByCustomerIdRequest) returns (ListAllBooksByCustomerIdResponse)
    {
        option (google.api.http) = {
            get: "/v1/book/userId"
        };
    }

}


message ReadBookRequest
{
    int32 Id = 1;
}

message ReadBookResponse
{
    int32 Id = 1;
    string title = 2;
    string author = 3;
    string genre = 4;
    float rating = 5;
    bool availability = 6;
    string description = 7;
    int32 CurrentOwnerId  = 8;
    string ImageUrl  = 9;
    
}

message GetBookByTitleRequest
{
    int32 Id = 1;
    string title = 2;
}

message GetBookByTitleResponse
{
    repeated ReadBookResponse book = 1;
    
}

message GetAllBookRequest { }

message GetAllBookResponse
{
    repeated ReadBookResponse book = 1;
}

message GetBooksByCategoryRequest 
{
    string category = 1;
}

message GetBooksByCategoryResponse
{
    repeated ReadBookResponse book = 1;
}

message UpdateBookRequest
{
    int32 id = 1;
    int32 CurrentOwnerId = 2;
}

message UpdateBookResponse
{
    int32 id = 1;
}

message ReturnBookRequest
{
    int32 id = 1;
    int32 CurrentOwnerId = 2;
}

message ReturnBookResponse
{
    int32 id = 1;
}
    
message ListCategoriesRequest
{
}

message ListCategoriesResponse
{
    repeated string category = 1;

}
message ListAllBooksByCustomerIdRequest
{
    int32 userId =1;
}
message ListAllBooksByCustomerIdResponse
{
    repeated ReadBookResponse book = 1;
}